frontend/src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.site-container {
  min-height: 100vh;
}

.navbar-custom {
  background-color: #f9f0db;
}
/* Modify brand and text color */

.navbar-custom .navbar-brand,
.navbar-custom .navbar-text {
  color: #a97a36;

  /* font-weight: bolder; */
}

main {
  flex: 1;
}

.btn-primary {
  background-color: #000 !important;
  color: #fff !important;
  border-color: #000 !important;
}

.products {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.product {
  border: 1px #de9dac solid;
  margin: 1rem;
}

.product img {
  width: 100%;
  max-width: 400px;
}

.product info {
  padding: 1rem;
}

.img-large {
  max-width: 100%;
}

